--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
       </header>
       <section>
         <h1>Welcome to CworkCville GitHub Page</h1>
-
-<p><a href="http://www.meetup.com/CoworkCville/">Meetup</a>
-<a href="https://twitter.com/CoworkCville">@CoworkCville</a>
-<a href="http://www.facebook.com/CoworkCville">Facebook</a>
-<a href="http://coworkcville.com/">Tumblr</a></p>
+        <ul>
+          <li><a href="http://www.meetup.com/CoworkCville/">Meetup</a></li>
+          <li><a href="http://coworkcville.com">Tumblr</a></li>
+          <li><a href="https://twitter.com/CoworkCville">@CoworkCville</a></li>
+          <li><a href="http://www.facebook.com/CoworkCville">Facebook</a></li>
+         </ul>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
