--- a/presentations/index.html
+++ b/presentations/index.html
@@ -1,8 +1,128 @@
-<html>
-<head>
-	<title></title>
-</head>
-<body>
-	<p>Hello</p>
-</body>
+<!doctype html>
+<html lang="en">
+
+	<head>
+		<meta charset="utf-8">
+
+		<title>Lean Thinking - Lean for things other then software</title>
+
+		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
+		<meta name="author" content="Hakim El Hattab">
+
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+		<link rel="stylesheet" href="css/reveal.min.css">
+		<link rel="stylesheet" href="css/theme/default.css" id="theme">
+
+		<!-- For syntax highlighting -->
+		<link rel="stylesheet" href="lib/css/zenburn.css">
+
+		<!-- If the query includes 'print-pdf', use the PDF print sheet -->
+		<script>
+			document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+		</script>
+
+		<!--[if lt IE 9]>
+		<script src="lib/js/html5shiv.js"></script>
+		<![endif]-->
+	</head>
+
+	<body>
+
+		<div class="reveal">
+
+			<!-- Any section element inside of this container is displayed as a slide -->
+			<div class="slides">
+
+				<section>
+					<h1>Lean Thinking</h1>
+					<h3>Lean for things other then software</h3>
+					<p>
+						<small>Created by <a href="http://o3design.net">Owen Zanzal</a> / <a href="http://twitter.com/o3design">@O3Design</a></small>
+					</p>
+				</section>
+				<section>
+					<section>
+						<h2>About me</h2>
+					</section>
+					<section>
+						<h2>Developer & Designer</h2>
+						<p>I work for Click2Mail.com</p>
+						<p>Moved to Charlottesville from CT 6 years ago</p>
+						<p>I like craft beer, playing guitar, and making hard cider</p>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>To Me Lean Is All About Strategy</h2>
+					</section>
+					<section>
+						<h2>How can I make X happen with as little risk as possible</h2>
+					</section>
+					<section>
+						<h2>Risk is...</h2>
+						<p class="fragment">Time</p>
+						<p class="fragment">Money</p>
+						<p class="fragment">Your life</p>
+					</section>
+					<section>
+						<blockquote>Anything worth doing is inherently risky</blockquote>
+					</section>
+					<section>
+						<h2>Some things are riskier then others</h2>
+					</section>
+					<section>
+						<h2>In any case you always want to try to reduce your risk</h2>
+					</section>
+					<section>
+						<h2>I call this "Lean Thinking"</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>"In the middle of difficulty lies opportunity"</h2>		
+					</section>
+					<section>
+						
+					</section>
+				</section>
+
+			</div>
+
+		</div>
+
+		<script src="lib/js/head.min.js"></script>
+		<script src="js/reveal.min.js"></script>
+
+		<script>
+
+			// Full list of configuration options available here:
+			// https://github.com/hakimel/reveal.js#configuration
+			Reveal.initialize({
+				controls: true,
+				progress: true,
+				history: true,
+				center: true,
+
+				theme: Reveal.getQueryHash().theme, // available themes are in /css/theme
+				transition: Reveal.getQueryHash().transition || 'default', // default/cube/page/concave/zoom/linear/fade/none
+
+				// Optional libraries used to extend on reveal.js
+				dependencies: [
+					{ src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+					{ src: 'plugin/markdown/showdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/zoom-js/zoom.js', async: true, condition: function() { return !!document.body.classList; } },
+					{ src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } }
+					// { src: 'plugin/remotes/remotes.js', async: true, condition: function() { return !!document.body.classList; } }
+				]
+			});
+
+		</script>
+
+	</body>
 </html>
