--- a/presentations/bku.html
+++ b/presentations/bku.html
@@ -1,3 +1,56 @@
+			
+				<section>
+					<section>
+						<h2>About me</h2>
+					</section>
+					<section>
+						<h2>Developer & Designer</h2>
+						<p>I work for Click2Mail.com</p>
+						<p>Moved to Charlottesville from CT 6 years ago</p>
+						<p>I like craft beer, playing guitar, and making hard cider</p>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>To Me Lean Is All About Strategy</h2>
+					</section>
+					<section>
+						<h2>How can I make X happen with as little risk as possible</h2>
+					</section>
+					<section>
+						<h2>Risk is...</h2>
+						<p class="fragment">Time</p>
+						<p class="fragment">Money</p>
+						<p class="fragment">Your life</p>
+					</section>
+					<section>
+						<blockquote>Anything worth doing is inherently risky</blockquote>
+					</section>
+					<section>
+						<h2>Some things are riskier then others</h2>
+					</section>
+					<section>
+						<h2>In any case you always want to try to reduce your risk</h2>
+					</section>
+					<section>
+						<h2>I call this "Lean Thinking"</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2>How am I using "Lean Thinking"?</h2>		
+					</section>
+					<section>
+						<h2>I am applying to to my career path</h2>
+					</section>
+				</section>
+				<section>
+					<section>
+						<h2></h2>
+					</section>
+
+				</section>
+
 				<section>
 					<h2>Heads Up</h2>
 					<p>
