--- a/presentations/index.html
+++ b/presentations/index.html
@@ -65,7 +65,7 @@
 					<h2>How am I using Lean Thinking?</h2>
 				</section>
 				<section>
-					<h2>So how do I go about making this idea happen?</h2>
+					<h2>How do I make my idea happen?</h2>
 				</section>
 				<section>
 					<h2>What is the path of least risk?</h2>
