--- a/presentations/index.html
+++ b/presentations/index.html
@@ -95,6 +95,15 @@
 					<h2>Closing thoughts</h2>
 					<p>Look for value in your validation</p>
 				</section>
+				<section>
+					<a href="http://www.meetup.com/CoworkCville/">Cowork Cville Meetup</a>
+					<br>	
+					<a href="http://charlottesville.startupweekend.org/">Startup Weekend Cville</a>
+					<br>
+					<a href="http://barcamp.org/w/page/401861/beCamp">BeCamp</a>
+					<br>
+					<a href="http://makerfairecville.com/">Maker Faire Cville</a>
+				</section>
 			</div>
 
 		</div>
